# emocare

./: .gitignore  README.md  TESTING.md
.devcontainer/: devcontainer.json  docker-compose.yml
backend/: .env.example  README.md  create_db.py  pyproject.toml  requirements.txt
backend/apps/conversations/: README.md  admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/apps/conversations/migrations/: 0001_initial.py
backend/apps/conversations/services/: __init__.py  deepgram_service.py  llm_service.py
backend/apps/core/: authentication.py  models.py
backend/apps/core/management/commands/: seed.py
backend/apps/emotions/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/emotions/management/commands/: seed_emotions.py
backend/apps/emotions/migrations/: 0001_initial.py
backend/apps/patients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/patients/migrations/: 0001_initial.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py
docs/: develop.md  patient-communication-flow.md
front/: package-lock.json  package.json  pnpm-lock.yaml
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/login/: page.tsx
front/src/app/test-conversation/: README.md  (+1 more)
front/src/components/: EmotionFilter.tsx  EmotionLegend.tsx  EmotionSummary.tsx  PlutchikWheel.tsx  StatusChips.tsx  TimelineSlider.tsx  Tooltip.tsx
front/src/hooks/: usePatientEmotions.ts
front/src/lib/: api.ts  plutchik.ts
front/src/types/: conversation.ts
(+1 files in other folders)
